# silicato

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  talk_to_codex.py
.codex/: ralph-loop.local.example.md
.codex/agents/: silicato-merger.md  silicato-ralph-loop-controller.md  silicato-worker-auto-stop-unification.md  silicato-worker-pane-routing.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
docs/agents/: new-session-handoff.md  ralph-loop.md  roles.md  workflow.md
docs/dev/: architecture.md  business-rules.md  business-rules.toml  dependency-rules.md  patterns-deep-dive.md  patterns-quickstart.md  release-rc.md  repo-checks.md
docs/dev/adr/: ADR-0005-bounded-recording-and-fallback-policy.md  ADR-0006-max-recording-default-disabled.md  README.md
docs/feature-requests/: 2026-03-10-pane-identifier-routing-plugin.md
docs/user/: alpha-preview.md  capabilities.md  dependencies.md  feedback-template.md  quickstart.md
scripts/: alpha_preview.sh  auto_stop_eval.py  auto_stop_record.py  release_cli.py  reset_alpha_state.sh
specs/: auto-stop-detector-unification.md  auto-stop-evaluation-harness.md  auto-stop-guided-fixture-recorder.md  bug-gh-copilot-submit-delay.md  milestone-1-multi-agent.md  named-pane-routing.md  release-0.1.0rc1.md  release-readiness-docs-and-semantic-coverage.md
src/dialogos/: __init__.py
src/dialogos/adapters/tmux/: sender.py
src/dialogos/ui/cli/: args.py  main.py  prompts.py
src/silicato/adapters/audio/: alsa_capture.py
src/silicato/application/: auto_stop_evaluation.py  auto_stop_recording_session.py
src/silicato/domain/: auto_stop.py
src/silicato/ports/: audio.py  storage.py
tests/contracts/: test_route_store_contract.py  test_sender_contract.py
tests/fixtures/auto_stop/: README.md
tests/integration/: test_fake_turn_flow.py
tests/unit/: test_auto_stop_detector.py  test_auto_stop_evaluation.py  test_auto_stop_live_unification.py  test_auto_stop_recording_session.py  test_cli_args.py  test_cli_helpers.py  test_cli_main_profiles.py  test_cli_main_routes.py  test_cli_profiles.py  test_cli_prompts.py  test_orchestrator.py  test_route_store.py  test_route_use_cases.py
(+9 files in other folders)
