[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silicato"
version = "0.1.0rc2"
description = "Linux push-to-talk voice bridge to terminal AI agents running in tmux."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["faster-whisper>=1.1.0"]
keywords = ["voice", "ai-agent", "tmux", "speech-to-text", "linux"]
authors = [{ name = "Silicato contributors" }]
maintainers = [{ name = "Silicato maintainers" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage = "https://github.com/dothackerman/silicato"
Repository = "https://github.com/dothackerman/silicato"
Issues = "https://github.com/dothackerman/silicato/issues"
Changelog = "https://github.com/dothackerman/silicato/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "twine>=5.1.1",
]

[project.scripts]
silicato = "silicato.ui.cli.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import sorting
  "UP",  # pyupgrade
  "B",   # bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "talk_to_codex.py"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["tests/architecture/fixtures/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "hardware: tests that require local audio/tmux hardware and runtime services",
]
pythonpath = ["src"]
